# Flat-Map-RB-Tree

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  flat-rb-tree-benchmark.cpp  flat-rb-tree.hpp  hash_flat_map_benchmark.cpp
benchmarks/results/: 100_000_elem.txt  100_elem.txt  10_000_000_elem.txt  10_000_elem.txt  1_000_000_elem.txt  1_000_elem.txt  500_000_elem.txt  500_elem.txt  50_000_elem.txt  5_000_000_elem.txt  5_000_elem.txt
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
examples/: CMakeLists.txt  flat-rb-tree-example.cpp  hash_flat_map_example.cpp
include/dro/: flat-rb-tree.hpp  hash_flat_map.hpp
src/: optimized-rb-tree.hpp
tests/: CMakeLists.txt  flat-rb-tree-test.cpp  flat-rb-tree.hpp  flat-set-test.hpp  hash_flat_map_unit_test.hpp  hash_flat_set_unit_test.hpp  optimized-rb-tree-test.cpp  stl_tree_public.h  test_main.cpp  tree_validation_test.hpp
